--- a/src/num/number.css
+++ b/src/num/number.css
@@ -1,6 +1,11 @@
 .main{
-    padding: 10px ;
     padding: 10px;
     background: azure;
-    width: fit-content;
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    display: flex
+;
+    align-items: center;
+    height: 100vh;
 }
